--- a/style.css
+++ b/style.css
@@ -16,23 +16,22 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 120vh;
-  overflow: auto;
+  min-height: 100vh;
+  overflow: hidden;
   perspective: 1000px;
 }
 
 .container {
   width: 50%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+
   
 }
 
 .card {
-  min-height: 80vh;
+  min-height: 30rem;
   width: 30rem;
-  box-shadow:  0px 30px 30px #82fed6,0px 0px 80px #280210;
+  box-shadow:  0px 20px 30px #82fed6,0px 0px 80px #280210;
   border-radius: 50px;
   padding: 0rem 2rem;
   transform-style: preserve-3d;
@@ -58,6 +57,7 @@ body {
    align-items: center;
    justify-content: center;
 	 position: absolute;
+   display: flex;
    top:30px;
    left: 70px;
    z-index: -1;
@@ -71,6 +71,7 @@ body {
 }
 
 .kakyoin:hover .hierophant {
+   display: flex;
    opacity: 1;
    
 }
@@ -109,12 +110,12 @@ body {
   justify-content: start;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   transition: all 0.75s ease-in ease-out;
 }
 
 .characters button {
-  padding:0.5rem 2rem;
+  padding:0.5rem 1.2rem;
   background: none;
   border: none;
   box-shadow:0px 5px 10px #280210;
@@ -149,14 +150,14 @@ button.active {
   font-family: inherit;
 }
 
-/*
-@media screen and (min-width: 750px) {
+
+@media screen and (min-width: 1080px) {
   .card {
-    width: 33rem;
-    padding: 0 5rem;
+    width: 32rem;
+    padding: 0 2.4rem;
   }
   .kakyoin{
-    width: 35rem;
+    width: 32rem;
     height: 30rem;
   }
   .hierophant{
@@ -167,5 +168,3 @@ button.active {
 
   }
 
-}
-*/
