--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  overflow: hidden;
+  overflow: auto;
   perspective: 1000px;
 }
 
